--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,17 @@
     <p>Formularios</p>
     <form>
         <label>Nombre</label>
-        <input type="text">
+        <input type="text"> <br>
+
+        <label>Apellido</label>
+        <input type="text"> <br>
+
+        <label>Email</label>
+        <input type="email"> <br>
+
+        <label>Calendario</label>
+        <input type="date"> <br>
+        
     </form>
     </body>
 </html>
